--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     <h1 class="display-3">Welcome, Space Cadets!</h1>
         <p>This is a template from BackSpace Academy for a simple website using the AWS API Gateway service. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
         <p> Pet ID:
-          <input type="number" id="petId" min="1" required>
+          <input id="petId" type="number" min="1" required>
           <br>
           <br>
-          <input class="btn btn-primary btn-lg" type="button" onclick="getPet()" value="Get Pet!">
+          <input  id="petBtn" class="btn btn-primary btn-lg" type="button" value="Get Pet!">
         </p>
       </div>
     </div>
